--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>skooter.ai</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="-">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/skooter4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta itemprop="name" content="skooter.ai">
+  <meta itemprop="description" content="-">
+  <!-- <meta itemprop="image"
+    content="https://raw.githubusercontent.com/skooter4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://skooter.vercel.app">
