--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,21 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>skooter.ai</title>
+  <title>skoter.ai</title>
   <meta name="description" content="-">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="skooter.ai">
+  <meta itemprop="name" content="skoter.ai">
   <meta itemprop="description" content="-">
   <!-- <meta itemprop="image"
-    content="https://raw.githubusercontent.com/skooter4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
+    content="https://raw.githubusercontent.com/skoter4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  
 </body>
 
 </html>
