--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </head>
 
 <body class="is-preload">
-	
+
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
 		<!-- Wrapper -->
 		<div id="wrapper">
-		
+
 			<!-- Panel (Banner) -->
 			<section class="panel spotlight medium left">
 				<div class="content span-7">
@@ -60,19 +60,26 @@
 
 			</section>
 			<!-- Panel (Spotlight) -->
-			<section class="panel spotlight large left" id="first">
+			<section class="panel spotlight small left" id="first">
 				<div class="content span-7">
-					<h2 class="major">VISION</h2>
-					<h2 class="major">we are changing the way world thinks about transportation</h2>
+					<p><span class="text-wrapper2" style="font-size: 2.2em; ">VISION</span></p>
+					<p><span class="text-wrapper1" style="font-size: 1.2em; "> we are changing the way world thinks
+							about transportation</span></p>
 				</div>
-
+			</section>
+			<section class="panel spotlight small right" id="first">
 				<div class="image filtered tinted" data-position="top right">
 					<img src="images/WBR-1_with logo.jpg" alt="" />
 				</div>
-				
 			</section>
 			<!-- Panel (Spotlight) -->
-			<section class="panel spotlight large right" id="first">
+			<section class="panel spotlight small left" id="first">
+			<div class="image filtered tinted" data-position="top left">
+				<img src="images/WBR-1_FR.png" alt="" />
+			</div>
+		</section>
+			<!-- Panel (Spotlight) -->
+			<section class="panel spotlight medium left" id="first">
 				<div class="content span-7">
 					<span class="text-wrapper1">
 						<p style="font-size: 1.5em;">Whether you're going to
@@ -84,9 +91,7 @@
 					<p style="font-size: 1.5em;">our scooter is a fun and efficient way to get around town</p>
 				</div>
 
-				<div class="image filtered tinted" data-position="top left">
-					<img src="images/WBR-1_FR.png" alt="" />
-				</div>
+				
 				<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 				<script>
 					var typed = new Typed(".mov2", {
@@ -100,7 +105,7 @@
 			</section>
 
 			<!-- Panel -->
-			<section class="panel color1">
+			<!-- <section class="panel color1">
 				<div class="intro joined">
 					<h2 class="major">Amet lorem</h2>
 					<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed
@@ -117,16 +122,16 @@
 						<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- Panel (Spotlight) -->
 			<section class="panel spotlight large left">
 				<div class="content span-5">
-					<h2 class="major">Magna amet tempus</h2>
-					<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex,
-						sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae
-						libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh
-						libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+					<p><span class="text-wrapper2" style="font-size: 1.2em; "> We Deliver Exceptional
+							Products and Services Around the World
+						</span></p>
+
+					<p>coming soon!</p>
 				</div>
 				<div class="image filtered tinted" data-position="top right">
 					<img src="images/WBR-Org.940.png" alt="" />
@@ -135,32 +140,32 @@
 
 			<!-- Panel -->
 			<section class="panel">
-				<div class="intro color2">
+				<!-- <div class="intro color0">
 					<h2 class="major">Elit integer</h2>
 					<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed
 						feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat
 						magna etiam.</p>
-				</div>
+				</div> -->
 				<div class="gallery">
 					<div class="group span-3">
-						<a href="images/WBR-Org.941.png" class="image filtered span-3" data-position="bottom"><img
+						<a href="images/WBR-Org.940.png" class="image filtered span-3" data-position="bottom"><img
 								src="images/WBR-Org.941.png" alt="" /></a>
-						<a href="images/WBR-Org.941.png" class="image filtered span-1-5" data-position="center"><img
-								src="images/WBR-Org.941.png" alt="" /></a>
-						<a href="images/WBR-Org.941.png" class="image filtered span-1-5" data-position="bottom"><img
-								src="images/WBR-Org.941.png" alt="" /></a>
+						<a href="images/WBR-Org.942.png" class="image filtered span-1-5" data-position="center"><img
+								src="images/WBR-Org.943.png" alt="" /></a>
+						<a href="images/WBR-Org.944.png" class="image filtered span-1-5" data-position="bottom"><img
+								src="images/WBR-EU-Final.717.png" alt="" /></a>
 					</div>
-					<a href="images/WBR-Org.942.png" class="image filtered span-2-5" data-position="top"><img
-							src="images/WBR-Org.942.png" alt="" /></a>
+					<a href="images/WBR-RP1.png" class="image filtered span-2-5" data-position="top"><img
+							src="images/WBR-RP2.png" alt="" /></a>
 					<div class="group span-4-5">
-						<a href="images/WBR-RP1.png" class="image filtered span-3" data-position="top"><img
-								src="images/WBR-RP1.png" alt="" /></a>
-						<a href="images/WBR-RP1.png" class="image filtered span-1-5" data-position="center"><img
-								src="images/WBR-RP1.png" alt="" /></a>
+						<a href="images/WBR-RP3.png" class="image filtered span-3" data-position="top"><img
+								src="images/WBR-RP4.png" alt="" /></a>
+						<a href="images/WBR-RP12.png" class="image filtered span-1-5" data-position="center"><img
+								src="images/WBR-RP10.png" alt="" /></a>
 						<a href="images/WBR-RP1.png" class="image filtered span-1-5" data-position="bottom"><img
 								src="images/WBR-RP1.png" alt="" /></a>
-						<a href="images/WBR-RP1.png" class="image filtered span-3" data-position="top"><img
-								src="images/WBR-RP1.png" alt="" /></a>
+						<a href="images/WBR-RP11.png" class="image filtered span-3" data-position="top"><img
+								src="images/WBR-1.427" alt="" /></a>
 					</div>
 					<a href="images/WBR-RP10.png" class="image filtered span-2-5" data-position="right"><img
 							src="images/WBR-RP10.png" alt="" /></a>
@@ -168,12 +173,10 @@
 			</section>
 
 			<!-- Panel -->
-			<section class="panel color4-alt">
-				<div class="intro color4">
+			<!-- <section class="panel color0">
+				<div class="intro color0">
 					<h2 class="major">Contact</h2>
-					<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed
-						feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat
-						magna etiam.</p>
+					<p>...</p>
 				</div>
 				<div class="inner columns divided">
 					<div class="span-3-25">
@@ -207,7 +210,7 @@
 						</ul>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 
 			<!-- Copyright -->
