--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
 </head>
-
+<div class="header" >
+	<div class="image" >
+		<img src="images/sklogo1.png" alt="sköter.ai" />
+	</div> 
+  </div>
 <body class="is-preload">
 
 	<!-- Page Wrapper -->
@@ -25,7 +29,14 @@
 		<div id="wrapper">
 
 			<!-- Panel (Banner) -->
-			<section class="panel spotlight medium left">
+			<section class="panel spotlight small left">
+
+				<div class="image filtered span-1-75" data-position="25% 25%">
+					<img src="images/11.jpg" alt="" />
+				</div>
+
+			</section>
+			<section class="panel spotlight medium right" id="firstt">
 				<div class="content span-7">
 					<p><span class="text-wrapper2" style="font-size: 2.2em; "> The Future of Mobility is here</span></p>
 					<span class="text-wrapper1">
@@ -52,34 +63,33 @@
 					})
 				</script>
 			</section>
-			<section class="panel spotlight small right">
-
-				<div class="image filtered span-1-75" data-position="25% 25%">
-					<img src="images/WBR-1-Dec1.png" alt="" />
-				</div>
-
-			</section>
+			
 			<!-- Panel (Spotlight) -->
 			<section class="panel spotlight small left" id="first">
 				<div class="content span-7">
 					<p><span class="text-wrapper2" style="font-size: 2.2em; ">VISION</span></p>
 					<p><span class="text-wrapper1" style="font-size: 1.2em; "> we are changing the way world thinks
 							about transportation</span></p>
+					<ul class="actions">
+						<li><a href="#third" class="button primary color1 circle icon solid fa-angle-right">Next</a>
+						</li>
+					</ul>
 				</div>
 			</section>
-			<section class="panel spotlight small right" id="first">
+			<section class="panel spotlight small right" id="second">
 				<div class="image filtered tinted" data-position="top right">
-					<img src="images/WBR-1_with logo.jpg" alt="" />
+					<img src="images/7.jpg" alt="" />
+				</div>
+
+			</section>
+			<!-- Panel (Spotlight) -->
+			<section class="panel spotlight small left" id="third">
+				<div class="image filtered tinted" data-position="top left">
+					<img src="images/9.jpg" alt="" />
 				</div>
 			</section>
 			<!-- Panel (Spotlight) -->
-			<section class="panel spotlight small left" id="first">
-			<div class="image filtered tinted" data-position="top left">
-				<img src="images/WBR-1_FR.png" alt="" />
-			</div>
-		</section>
-			<!-- Panel (Spotlight) -->
-			<section class="panel spotlight medium left" id="first">
+			<section class="panel spotlight medium left" id="fourth">
 				<div class="content span-7">
 					<span class="text-wrapper1">
 						<p style="font-size: 1.5em;">Whether you're going to
@@ -89,13 +99,17 @@
 					</span>
 
 					<p style="font-size: 1.5em;">our scooter is a fun and efficient way to get around town</p>
+					<ul class="actions">
+						<li><a href="#fifth" class="button primary color1 circle icon solid fa-angle-right">Next</a>
+						</li>
+					</ul>
 				</div>
 
-				
+
 				<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 				<script>
 					var typed = new Typed(".mov2", {
-						strings: [, "drop kids in school", "work", "the grocery store", "or dine with friends"],
+						strings: [, "drop kids in school", "work", "the grocery store", "dine with friends"],
 						typeSpeed: 100,
 						backSpeed: 100,
 						loop: true
@@ -125,21 +139,25 @@
 			</section> -->
 
 			<!-- Panel (Spotlight) -->
-			<section class="panel spotlight large left">
+			<section class="panel spotlight large left" id="fifth">
 				<div class="content span-5">
 					<p><span class="text-wrapper2" style="font-size: 1.2em; "> We Deliver Exceptional
 							Products and Services Around the World
 						</span></p>
 
 					<p>coming soon!</p>
+					<ul class="actions">
+						<li><a href="#sixth" class="button primary color1 circle icon solid fa-angle-right">Next</a>
+						</li>
+					</ul>
 				</div>
 				<div class="image filtered tinted" data-position="top right">
-					<img src="images/WBR-Org.940.png" alt="" />
+					<img src="images/4.jpg" alt="" />
 				</div>
 			</section>
 
 			<!-- Panel -->
-			<section class="panel">
+			<section class="panel" id="sixth">
 				<!-- <div class="intro color0">
 					<h2 class="major">Elit integer</h2>
 					<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed
@@ -148,27 +166,30 @@
 				</div> -->
 				<div class="gallery">
 					<div class="group span-3">
-						<a href="images/WBR-Org.940.png" class="image filtered span-3" data-position="bottom"><img
-								src="images/WBR-Org.941.png" alt="" /></a>
-						<a href="images/WBR-Org.942.png" class="image filtered span-1-5" data-position="center"><img
-								src="images/WBR-Org.943.png" alt="" /></a>
-						<a href="images/WBR-Org.944.png" class="image filtered span-1-5" data-position="bottom"><img
-								src="images/WBR-EU-Final.717.png" alt="" /></a>
+						<a href="images/8.jpg" class="image filtered span-3" data-position="bottom"><img
+								src="images/8.jpg" alt="" /></a>
+						<a href="images/6.jpg" class="image filtered span-1-5" data-position="center"><img
+								src="images/6.jpg" alt="" /></a>
+						<a href="images/2.jpg" class=" image filtered span-1-5"
+							data-position="bottom"><img src="images/2.jpg" alt="" /></a>
 					</div>
-					<a href="images/WBR-RP1.png" class="image filtered span-2-5" data-position="top"><img
-							src="images/WBR-RP2.png" alt="" /></a>
-					<div class="group span-4-5">
-						<a href="images/WBR-RP3.png" class="image filtered span-3" data-position="top"><img
-								src="images/WBR-RP4.png" alt="" /></a>
-						<a href="images/WBR-RP12.png" class="image filtered span-1-5" data-position="center"><img
-								src="images/WBR-RP10.png" alt="" /></a>
-						<a href="images/WBR-RP1.png" class="image filtered span-1-5" data-position="bottom"><img
-								src="images/WBR-RP1.png" alt="" /></a>
-						<a href="images/WBR-RP11.png" class="image filtered span-3" data-position="top"><img
-								src="images/WBR-1.427" alt="" /></a>
-					</div>
-					<a href="images/WBR-RP10.png" class="image filtered span-2-5" data-position="right"><img
-							src="images/WBR-RP10.png" alt="" /></a>
+
+					<!-- <div class="group span-4-5">
+						<a href="images/WBR-SimplePipe-April2023.1199.png" class="image filtered span-3"
+							data-position="top"><img src="images/WBR-SimplePipe-April2023.1199.png" alt="" /></a>
+						<a href="images/WBR-SimplePipe-April2023.1196.png" class="image filtered span-1-5"
+							data-position="center"><img src="images/WBR-SimplePipe-April2023.1196.png" alt="" /></a>
+						<a href="images/WBR-SimplePipe-April2023.1197.png" class="image filtered span-1-5"
+							data-position="bottom"><img src="images/WBR-SimplePipe-April2023.1197.png" alt="" /></a>
+						<a href="images/WBR-SimplePipe-April2023.1198.png" class="image filtered span-3"
+							data-position="top"><img src="images/WBR-SimplePipe-April2023.1198.png" alt="" /></a>
+					</div> -->
+					<!-- <a href="images/WBR-RP10.png" class="image filtered span-2-5" data-position="right"><img
+							src="images/WBR-RP10.png" alt="" /></a> -->
+							<ul class="actions">
+								<li><a href="#firstt" class="button primary color1 circle icon solid fa-angle-right">Next</a>
+								</li>
+							</ul>
 				</div>
 			</section>
 
